--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -5,13 +5,14 @@ on:
 
 jobs:
   test:
+    name: test
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: action/checkout@v3
+        uses: actions/checkout@v4
 
       - name: setup environment
-        uses: action/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '22'
 
@@ -25,20 +26,21 @@ jobs:
           npm run check > test-result.txt
 
       - name: upload artifact
-        uses: action/upload-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: test-result
           path: test-result.txt
   deploy:
+    name: deploy
     needs: test
     runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
-        uses: action/checkout@v3
+        uses: actions/checkout@v4
 
       - name: download the test test-result
-        uses: action/download-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: test-result
 
