--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -52,5 +52,4 @@ jobs:
         run: |
           sudo npm install -g pm2
           pm2 delete all || true
-          pm2 start "./src/server.js" --name node-app
-          sleep 300
+          pm2 start './src/server.js' --name node-app
