--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -53,3 +53,6 @@ jobs:
           sudo npm install -g pm2
           pm2 delete all || true
           pm2 start './src/server.js' --name node-app
+
+      - name: show logs
+        runs: pm2 logs node-app
