--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -55,4 +55,4 @@ jobs:
           pm2 start './src/server.js' --name node-app
 
       - name: show logs
-        runs: pm2 logs node-app
+        run: pm2 logs node-app
